# src/PAMS.Domain/Entities/Allocation.cs
@@ -10,6 +10,7 @@ public class Allocation : IAuditableEntity, ISoftDeletable
     public virtual DateOnly FromDate { get; set; }
     public virtual DateOnly? ToDate { get; set; }
     public virtual int Percentage { get; set; }
+    public virtual string? ProjectRole { get; set; }
     public virtual Guid AllocatedById { get; set; }
     public virtual DateTime? DeletedAt { get; set; }
     public virtual DateTime CreatedAt { get; set; }
